--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <meta name="publisher" content="PT. Deephosts">
   <meta name="author" content="Deephosts Tech Team">
   <title>Web Hosting Indonesia Terbaik, ISO 27001 Certified | Deephosts</title>
-
   <link href="//fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600" rel="stylesheet">
   <link rel="shortcut icon" href="/assets/img/favicon.png">
   <link href="/assets/css/all.min.css" rel="stylesheet">
@@ -16,7 +15,6 @@
   <link rel="stylesheet" href="/assets/css/dw_homepage.css">
   <link rel="stylesheet" href="/assets/css/shared.css">
   <link rel="stylesheet" type="text/css" media="all" href="/assets/vendor/revslider/css/settings.css" />
-
 
   <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -35,8 +33,8 @@
   <meta name="description" content="Penyedia web hosting terbaik di Indonesia bersertifikat ISO 27001 dengan layanan support 24/7. Aman, cepat, fitur lengkap, uptime SLA 100%! | Deephosts" />
   <meta property="og:type" content="business.business">
   <meta property="og:title" content="Deephosts">
-  <meta property="og:url" content="https://www.dewaweb.com">
-  <meta property="og:image" content="https://www.dewaweb.com/revslider/media/d4368-dw-main-slider-2-2.png">
+  <meta property="og:url" content="https://deephosts.github.io">
+  <meta property="og:image" content="https://deephosts.github.io/revslider/media/d4368-dw-main-slider-2-2.png">
   <meta property="business:contact_data:street_address" content="Gallery West Office – 16th Floor Jl. Panjang no. 5, Kebon Jeruk">
   <meta property="business:contact_data:locality" content="Jakarta Barat">
   <meta property="business:contact_data:region" content="DKI Jakarta">
@@ -46,15 +44,15 @@
   <meta name="twitter:site" content="@dewaweb">
   <meta name="twitter:title" content="Deephosts Cloud Hosting Murah Terbaik di Indonesia">
   <meta name="twitter:description" content="Cloud Hosting, VPS dan Domain Murah Terbaik di Indonesia yang bersertifikasi ISO 27001 dan Support 24/7. Segera pindahkan website anda ke Hosting Murah, Aman, Cepat, dan Terbaik Deephosts.">
-  <link rel="canonical" href="https://www.dewaweb.com" />
+  <link rel="canonical" href="https://deephosts.github.io" />
   <script type="application/ld+json">
     {
       "@context": "http://schema.org",
       "@type": "WebSite",
-      "url": "https://www.dewaweb.com/",
+      "url": "https://deephosts.github.io/",
       "potentialAction": {
         "@type": "SearchAction",
-        "target": "https://www.dewaweb.com/blog/?s={search_term_string}",
+        "target": "https://deephosts.github.io/blog/?s={search_term_string}",
         "query-input": "required name=search_term_string"
       }
     }
