--- a/index.html
+++ b/index.html
@@ -20,13 +20,6 @@
   <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
   <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 <![endif]-->
-  <script type="text/javascript">
-    var csrfToken = '2a965359945ad7857d14165de2448e45dc7db32e',
-      markdownGuide = 'Panduan Markdown',
-      locale = 'en',
-      saved = 'Tersimpan',
-      saving = 'autosaving';
-  </script>
   <script src="/assets/js/scripts.min.js"></script>
   <meta name="msvalidate.01" content="380A0C2E34C9DC7CF05052CFE7B9A3FA" />
 
@@ -708,7 +701,7 @@
                     Tersedia berbagai paket web hosting untuk personal, corporates, e-commerce, dan developers.
                   </p>
                   <div class="m-dwHomepageCloudHosting__btnDetails">
-                    <a class="a-dwBtnOrange" href="/hosting">Lihat Paket Cloud Hosting</a>
+                    <a class="a-dwBtnOrange" href="/index.php?rp=/store/shared-hosting">Lihat Paket Cloud Hosting</a>
                   </div>
                 </div>
               </div>
@@ -725,7 +718,7 @@
                     Pindahkan aplikasi/website high traffic kamu ke VPS terbaik di Deephosts dengan teknologi 100% cloud-powered, Intel Xeon Gold (Cascade Lake), Ultra Fast NVMe SSD Storage, KVM, Triple Data Replication, 100% Uptime SLA, Unlimited Bandwidth, dan Ninja Support 24/7 siap membantu kamu untuk instalasi server tanpa biaya tambahan. Tanpa ribet dan harga terjangkau.
                   </p>
                   <div class="m-dwHomepageCloudServer__btnDetails">
-                    <a class="a-dwBtnOrange" href="/cloud-vps">Lihat Paket VPS</a>
+                    <a class="a-dwBtnOrange" href="/index.php?rp=/store/vps">Lihat Paket VPS</a>
                   </div>
                 </div>
               </div>
@@ -737,12 +730,12 @@
                 </div>
                 <div class="m-dwHomepageBackup__details">
                   <h1 class="h1">Cloud VPS</h1>
-                  <p class="h3">Layanan Backup dan Disaster Recovery.</p>
+                  <p class="h3">VPS Murah dan Terbaik dengan NVMe SSD.</p>
                   <p class="a-dwHomepageBackup__description">
-                    Jauhkan risiko kehilangan data dengan inovasi cloud backup otomatis dari Deephosts. Kamu bisa melakukan backup data yang ada di physical server, virtual server, workstation, mobile device, dan Office365 ke lokasi aman di cloud datacenter dengan harga terjangkau, sehingga ketika terjadi insiden, data bisa dipulihkan dengan cepat dan mudah.
+                    Pindahkan aplikasi/website high traffic kamu ke VPS terbaik di Deephosts dengan teknologi 100% cloud-powered, Intel Xeon Gold (Cascade Lake), Ultra Fast NVMe SSD Storage, KVM, Triple Data Replication, 100% Uptime SLA, Unlimited Bandwidth, dan Ninja Support 24/7 siap membantu kamu untuk instalasi server tanpa biaya tambahan. Tanpa ribet dan harga terjangkau.
                   </p>
                   <div class="m-dwHomepageBackup__btnDetails">
-                    <a class="a-dwBtnOrange" href="/backup">Lihat Layanan Cloud Backup</a>
+                    <a class="a-dwBtnOrange" href="/index.php?rp=/store/cloud-vps">Lihat Paket VPS</a>
                   </div>
                 </div>
               </div>
@@ -776,7 +769,7 @@
                     Jauhkan risiko kehilangan data dengan inovasi cloud backup otomatis dari Deephosts. Kamu bisa melakukan backup data yang ada di physical server, virtual server, workstation, mobile device, dan Office365 ke lokasi aman di cloud datacenter dengan harga terjangkau, sehingga ketika terjadi insiden, data bisa dipulihkan dengan cepat dan mudah.
                   </p>
                   <div class="m-dwHomepageBackup__btnDetails">
-                    <a class="a-dwBtnOrange" href="/backup">Lihat Layanan Cloud Backup</a>
+                    <a class="a-dwBtnOrange" href="/index.php?rp=/store/bare-metal">Lihat Layanan Cloud Backup</a>
                   </div>
                 </div>
               </div>
@@ -793,7 +786,7 @@
                     Beli SSL murah dan terpercaya dari Deephosts, premium distributor dari DigiCert, GeoTrust, Thawte, dan Sectigo/Comodo. Jaminan harga SSL paling murah di Indonesia.
                   </p>
                   <div class="m-dwHomepageSSL__btnDetails">
-                    <a class="a-dwBtnOrange" href="/ssl-certificates">Lihat Layanan SSL</a>
+                    <a class="a-dwBtnOrange" href="/index.php?rp=/store/ssl">Lihat Layanan SSL</a>
                   </div>
                 </div>
               </div>
