--- a/index.html
+++ b/index.html
@@ -801,44 +801,13 @@
               </div>
             </div>
           </div>
-          <script>
-            // Add click to show testimonials
-            $('.reviewmore').click(function () {
-              var card = $(this).parent().parent().parent();
-              card.css("height", "auto");
-              $(this).hide();
-              $(this).siblings("span").show();
-            });
-            // End of Add click to show testimonials
-          </script>
-          <script>
-            (function (d, s, id) {
-              var js;
-              if (d.getElementById(id)) {
-                return;
-              }
-              js = d.createElement(s);
-              js.id = id;
-              js.src = "https://embedsocial.com/embedscript/ri.js";
-              d.getElementsByTagName("head")[0].appendChild(js);
-            }(document, "script", "EmbedSocialReviewsScript"));
-          </script>
-          <div class="o-dwHomepageTestimonialsVideoSection" style="padding-bottom: 6.3em;">
-            <div class="m-dwHomepageTestimonialsVideoSection__container">
-              <div class="o-dwHomepageTestimonialsSection__videoTestimonial">
-                <div class="video-wrapper" data-thumbnail="o79LtBTe9GQ" data-embed="o79LtBTe9GQ">
-                  <div class="play-button"></div>
-                </div>
-              </div>
-            </div>
-          </div>
           <div class="o-dwSupport">
             <div class="m-dwSupport__container">
               <div class="m-dwSupport__profilePict">
-                <img src="/assets/img/contact-ninja-support-dewaweb-mascot.png" alt="Deephosts Ninja Support 24/7" class="img-responsive" loading="lazy">
+                <img src="/assets/img/custumer-service.png" alt="Deephosts customer Support 24/7" class="img-responsive" loading="lazy">
               </div>
               <div class="m-dwSupport__contact">
-                <p class="h1">Contact Our Ninja Support 24/7</p>
+                <p class="h1">Contact Our Support 24/7</p>
                 <p class="h3">We are here to help and solve your problems, anytime.</p>
               </div>
               <div class="m-dwSupport__btnLiveChat">
@@ -906,7 +875,9 @@
   <section id="dwFooter" class="o-dwFooter">
     <div class="m-dwFooter__mainContainer">
       <div class="m-dwFooter__container -first">
-        <div class="a-dwFooter__logo"><a href="/" style="display: inline-block; height: 100%; width: 100%;"></a></div>
+        <div class="a-dwFooter__logo">
+          <a href="/" style="display: inline-block; height: 100%; width: 100%;"></a>
+        </div>
         <div class="m-dwFooter__badges">
           <div class="a-dwFooter__badgeContainer -iso">
             <a href="/blog/cloud-hosting-pertama-di-indonesia-dengan-sertifikat-iso-27001/" rel="noopener">
