--- a/index.html
+++ b/index.html
@@ -146,34 +146,6 @@
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right m-dwNavbar__secondaryNavbar" data-in="fadeIn" data-out="fadeOut">
-            <li menuitemname="Search" id="Secondary_Navbar-SiteSearch" class="m-dwSiteSearch__searchToggle -desktop">
-              <a class="dropdown-toggle a-dwSiteSearch__searchToggle -desktop -close" data-toggle="dropdown" href="#" aria-expanded="false">
-                <i class="fa ss-search fa-lg ss-icon" aria-hidden="true"></i>
-                <i class="fa ss-delete fa-lg ss-icon" aria-hidden="true"></i>
-              </a>
-              <ul class="dropdown-menu m-dwSiteSearch__dropdown -desktop">
-                <li menuitemname="siteSearchForm" id="Secondary_Navbar-siteSearch-searchForm-desktop" style="width:100%;">
-                  <div class="m-dwSiteSearch__mainContainer">
-                    <div class="m-dwSiteSearch__searchContainer">
-                      <form id="dwSiteSearchFormDesktop" method="GET" action="/search" style="width:100%;">
-                        <div class="input-group m-dwSiteSearch__inputSearchKeyword">
-                          <span class="input-group-addon">
-                            <i class="fa ss-search fa-lg" aria-hidden="true"></i>
-                          </span>
-                          <input type="text" name="keyword" autocomplete="off" class="form-control a-dwSiteSearch__inputSearchKeyword" placeholder="Ketikkan kata kunci...">
-                          <span class="input-group-btn">
-                            <button type="submit" class="btn a-dwSiteSearch__inputSearchKeywordIcon">
-                              <i class="fa fa-circle-o-notch fa-spin hidden"></i>
-                              Search
-                            </button>
-                          </span>
-                        </div>
-                      </form>
-                    </div>
-                  </div>
-                </li>
-              </ul>
-            </li>
             <li menuitemname="Cart" id="Secondary_Navbar-Cart" class="m-dwNavbar__cart -desktop">
               <a href="/cart.php?a=view" alt="">
                 <i class="fa fa-lg ss-cart ss-icon"></i>
@@ -727,7 +699,7 @@
             <div class="o-dwHomepage__SSLSection">
               <div class="m-dwHomepageSSL__container">
                 <div class="m-dwHomepageSSL__icon">
-                  <div class="a-dwHomepageSSL__icon"></div>
+                  <div class="dpService6__icon"></div>
                 </div>
                 <div class="m-dwHomepageSSL__details">
                   <h1 class="h1">SSL Certificates</h1>
