--- a/index.html
+++ b/index.html
@@ -868,50 +868,34 @@
       </div>
       <div class="m-dwFooter__container -third">
         <div class="m-dwFooter__links -company">
-          <div class="a-dwFooter__linkCategory">COMPANY<i class="fa fa-chevron-down"></i></div>
+          <div class="a-dwFooter__linkCategory">HOSTING<i class="fa fa-chevron-down"></i></div>
           <div class="m-dwFooter__linkLists">
-            <a href="/about-us">About Us</a>
-            <a href="/media-kit">Media Kit</a>
-            <a href="/blog/">Blog</a>
-            <a href="/jobs">Careers</a>
-          </div>
-        </div>
-        <div class="m-dwFooter__links -layanan">
-          <div class="a-dwFooter__linkCategory">LAYANAN<i class="fa fa-chevron-down"></i></div>
-          <div class="m-dwFooter__linkLists">
-            <a href="/domain">Domain Murah</a>
-            <a href="/hosting">Cloud Hosting</a>
-            <a href="/cloud-vps">Cloud Server (VPS)</a>
-            <a href="/backup">Cloud Backup</a>
-            <a href="/ssl-certificates">SSL Certificates</a>
-            <a href="/dewastore">Dewastore</a>
-
-
-          </div>
-        </div>
-      </div>
-      <div class="m-dwFooter__container -fourth">
-        <div class="m-dwFooter__links -reseller">
-          <div class="a-dwFooter__linkCategory">RESELLER<i class="fa fa-chevron-down"></i></div>
-          <div class="m-dwFooter__linkLists">
-            <a href="/affiliate-program">Affiliate Program</a>
-            <a href="/partner-program">VIP Partner Program</a>
+            <a href="/index.php?rp=/store/shared-hosting">Shared Hosting</a>
+            <a href="/index.php?rp=/store/vps">VPS</a>
+            <a href="/index.php?rp=/store/cloud-vps">Cloud VPS</a>
+            <a href="/index.php?rp=/store/dedicated-cloud">Dedicated Cloud</a>
+            <a href="/index.php?rp=/store/bare-metal">Bare Metal</a>
           </div>
         </div>
         <div class="m-dwFooter__links -support">
           <div class="a-dwFooter__linkCategory">SUPPORT<i class="fa fa-chevron-down"></i></div>
           <div class="m-dwFooter__linkLists">
             <a href="/serverstatus.php">Status Network</a>
-            <a href="/buka-tiket">Buka Tiket Support</a>
-
+            <a href="/submitticket.php">Buka Tiket Support</a>
           </div>
         </div>
-        <div class="m-dwFooter__links -others">
-          <div class="a-dwFooter__linkCategory">OTHERS<i class="fa fa-chevron-down"></i></div>
+      </div>
+      <div class="m-dwFooter__container -fourth">
+        <div class="m-dwFooter__links -layanan">
+          <div class="a-dwFooter__linkCategory">SERVICES<i class="fa fa-chevron-down"></i></div>
           <div class="m-dwFooter__linkLists">
-            <a href="https://promo.deephosts.com/?utm_source=deephostscom&utm_medium=footer" target="_blank" rel="noopener">Promo</a>
-            <a href="/free-hosting-non-profit">Hosting Gratis untuk Non-Profit</a>
+            <a href="/index.php?rp=/store/ssl-certificates">SSL Certificates</a>
+            <a href="/index.php?rp=/store/vpn">VPN</a>
+            <a href="/index.php?rp=/store/website-builder">Website Builder</a>
+            <a href="/index.php?rp=/store/sitelock">Website Security</a>
+            <a href="/index.php?rp=/store/marketgoo">SEO Tools</a>
           </div>
+        </div>
         </div>
       </div>
     </div>
